# protolib

./: CMakeLists.txt  README.md
array/: CMakeLists.txt
array/include/protolib/: DataSpan.hpp  Frame.hpp  ImageData.hpp
array/src/: DataSpan.test.cpp  Frame.cpp  Frame.test.cpp  ImageData.test.cpp
cmake/: protolibConfig.cmake.in
core/: CMakeLists.txt
core/include/protolib/: SimpleQueue.hpp  defs.hpp  protolib.hpp  utils.hpp
core/src/: defs.cpp  defs.test.cpp  utils.cpp  utils.test.cpp
examples/: CMakeLists.txt  e1_read_file.cpp  e2_read_jungfrau_file.cpp  e3_just_the_data.cpp  e4_iterate_file.cpp  e5_eiger.cpp  e6_benchmark.cpp  e7_save_numpy.cpp  e8_benchmark_pixelsum.cpp  e9_moench03.cpp
file_io/: CMakeLists.txt
file_io/include/protolib/: DataType.hpp  File.hpp  FileInfo.hpp  FilePtr.hpp  FileWrapper.hpp  NumpyFile.hpp  NumpyFileHeader.hpp  RawFile.hpp  RawFileWrappers.hpp  RawMasterFile.hpp  file.hpp
file_io/src/: DataType.cpp  DataType.test.cpp  File.cpp  NumpyFile.cpp  NumpyFile.test.cpp  NumpyFileHeader.cpp  NumpyFileHeader.test.cpp  RawFile.cpp  RawMasterFile.cpp  RawMasterFile.test.cpp
processing/: CMakeLists.txt
processing/include/protolib/: ClusterFinder.hpp  calibration.hpp  conversion_helper.hpp  pedestal.hpp
processing/src/: ClusterFinder.test.cpp  pedestal.cpp
python/: CMakeLists.txt
python/examples/: basic_examples.ipynb  e1_read_file.py  pyex1_read_file.py  pyex2_jungfrau_file.py  pyex3_imshow.py  pyex4_iterate_file.py  pyex5_iterate_benchmark.py
python/protolib/: PythonClusterFinder.py  __init__.py  folder_helper.py  root_helper.py
python/scripts/: numpy_inspect.py  play.py
python/src/: main.cpp  np_helper.hpp
tests/: CMakeLists.txt
